yaml path as build param

--- a/src/OpenApi.Generator/OpenApi.Generator.csproj
+++ b/src/OpenApi.Generator/OpenApi.Generator.csproj
@@ -8,7 +8,11 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <PackageScribanIncludeSource>true</PackageScribanIncludeSource>
   </PropertyGroup>
-
+	
+  <ItemGroup>
+    <CompilerVisibleProperty Include="OpenApiSpecPath" />
+  </ItemGroup>
+	
   <ItemGroup>
     <None Remove="Templates\ControllerTemplate.scriban" />
   </ItemGroup>
